Fix logo alignment

--- a/src/themes/_common/player/gallery-sidebar.scss
+++ b/src/themes/_common/player/gallery-sidebar.scss
@@ -18,7 +18,6 @@
     a {
         color: #ffffff;
         cursor: pointer;
-        display: inline-block;
         height: 100%;
     }
 }
